# lysergic-cli

./: Cargo.toml  tags
src/: main.rs
