[package]
name = "lysergic-cli"
authors = ["Andrew Fraser <a@serfrae.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
lysergic-tokenizer = { version = "0.1.0", path = "../lysergic-tokenizer" }
anyhow = "1.0.86"
borsh = {version = "1.5.1", features = ["derive"]}
clap = {version = "4.5.7", features = ["cargo", "derive"]}
serde = {version = "1.0.203", features = ["derive"]}
solana-cli-config = "1.18.16"
solana-client = "1.18.16"
solana-sdk = "1.18.16"
spl-associated-token-account = "3.0.2"
spl-token = "=4.0.0"
chrono = "0.4.38"

[[bin]]
name = "lysc"
path = "src/main.rs"
